<resources>
    <string name="app_name">Nuevo Lazo</string>
    <string name="tituloSplashScreen">Nuevo Lazo</string>
    <string name="descripcionSplashScreen">Creando lazos entre personas y animales desde 1999</string>
    <string name="registrarse">¡Registrate ya!</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="shared_file">com.feadca.protectora.SHARED_KEY_FILE</string>
    <string name="recoverPassword">Recuperar contraseña</string>
    <string name="goToLogin">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="user">Usuario</string>
    <string name="fullName">Nombre completo</string>
    <string name="phone">Teléfono</string>
    <string name="address">Dirección</string>
    <string name="city">Ciudad</string>
    <string name="zipcode">Código postal</string>
    <string name="dangerousDog">Carnet PPP</string>
    <string name="authData">Datos de autenticación</string>
    <string name="personalData">Datos personales</string>
    <string name="anotherData">Otros datos</string>
    <string name="locationData">Datos de localización</string>
    <string name="birthDate">Fecha de nacimiento</string>
    <string name="image">Imagen</string>
    <string name="emailRequired">Email *</string>
    <string name="userRequired">Usuario *</string>
    <string name="passwordRequired">Contraseña *</string>
    <string name="fullNameRequired">Nombre completo *</string>
    <string name="phoneRequired">Teléfono *</string>
    <string name="birthDateRequired">Fecha de nacimiento *</string>
    <string name="addressRequired">Dirección *</string>
    <string name="cityRequired">Ciudad *</string>
    <string name="zipcodeRequired">Código postal *</string>
    <string name="menu_about">Quiénes somos</string>
    <string name="menu_contact">Contacto</string>
    <string name="usuario_invitado">Usuario Invitado</string>
    <string name="gracias">Gracias por usar nuestra aplicación</string>
    <string name="nuevo_lazo">Nuevo Lazo</string>
    <string name="menu_donations">Donaciones</string>
    <string name="animals">Animales</string>
    <string name="menu_animals">Ver animales</string>
    <string name="menu_revisions">Revisiones</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_graphs">Gráficos</string>
    <string name="operacionesUsuario">Usuario</string>
    <string name="menu_profile">Mi perfil</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_text1">
        La Protectora Nuevo Lazo surgió en 1999 con el objetivo de ayudar a los animales más desfavorecidos a encontrar una nueva familia, un nuevo lazo.\n\nEsto incluye tanto perros, gatos y hurones como a diferentes animales exóticos tales como fénecs, ajolotes o guacamayos.\n\nDesde entonces hemos logrado encontrar un nuevo hogar a más de 1000 animales, y seguimos sumando.
    </string>
    <string name="about_text2">¿Nos ayudarás a encontrar un hogar a estos animales?</string>
    <string name="ver_animales">Ver animales</string>
    <string name="nombre">Nombre</string>
    <string name="enviar_mensaje">Enviar mensaje</string>
    <string name="donationsTitle">Realizar una donación</string>
    <string name="donationsText">
        Los animales de Nuevo Lazo necesitan tu ayuda, es por ello que ponemos a su disposición las diferentes opciones con las que puede realizar una donación.\n\nCon tan sólo 1€, podrás donar un cuenco de comida a uno de nuestros animales. Un gasto tan pequeño significa una gran diferencia para ellos.
    </string>
    <string name="bizum">Bizum</string>
    <string name="transfer">Transferencia bancaria</string>
    <string name="paypal">PayPal</string>
    <string name="redsys">Pago con tarjeta</string>
    <string name="donation_bizum">Donación por Bizum</string>
    <string name="donation_bank">Donación por transferencia bancaria</string>
    <string name="cerrar">Cerrar</string>
    <string name="transferencias">Realizar una transferencia:</string>
    <string name="realizar_un_pago">Realizar un pago:</string>
    <string name="introduzca_la_cantidad_a_donar">Introduzca la cantidad a donar...</string>
    <string name="payment_completed">Pago completado</string>
    <string name="paymentError">Error en el pago</string>
    <string name="paymentCancelled">Se ha cancelado el pago</string>
    <string name="error">Se ha producido un error</string>
    <string name="menu_blog">Blog</string>
    <string name="exampleArticle"><![CDATA[El ajolote es el único animal capaz de regenerar cualquier parte de su cuerpo en días o semanas.\n\nEl 1 de febrero de cada año se celebra el Día Nacional del Ajolote Mexicano, que es una especie de anfibio de la familia Ambystomatidae, que se encuentra en peligro de extinción. \n\nEl ajolote es una larva no metamorfoseada de la salamandra mexicana.\nEl ajolote o axolote es un animal endémico muy peculiar, ya que posee características que ninguna otra especie posee.\n\nEl nombre del ajolote proviene del náhuatl “Axolotl”, que significa “monstruo de agua”.>El ajolote se relaciona con el Dios Xólotl, hermano gemelo de Quetzalcóatl, quien se rehusaba al sacrificio, según relatos de Fray Bernardino se Sahagún, misionero franciscano.\n\nLos ajolotes habitan en cuerpos de agua dulce de México; se pueden encontrar en el lago de Pátzcuaro, Michoacán y el lago de Xochimilco, en la Ciudad de México. El ajolote es el único animal capaz de regenerar cualquier parte de su cuerpo en días o semanas sin dejar cicatrices. Puede regenerar extremidades, incluyendo huesos, mandíbula, piel, órganos, espina dorsal, retina, cerebro y hasta el corazón.\n\nEn las patas delanteras los ajolotes tienen cuatro dedos, mientras que en las traseras tienen cinco dedos.]]></string>
    <string name="cargando">Cargando...</string>
    <string name="errorPago">Se ha producido un error en el pago.</string>
    <string name="donacion_cancelada">Donación cancelada.</string>
    <string name="errorIntenteMasTarde">Se ha producido un error. Inténtelo de nuevo más tarde</string>
    <string name="animalId">ID del animal</string>
    <string name="cargarRevisiones">Cargar revisiones</string>
    <string name="revisiones">Revisiones</string>
    <string name="menu_create_revision">Nueva revisión</string>
    <string name="fecha_revision">Fecha de la revisión</string>
    <string name="filtrar">Filtar</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="solicitar">Solicitar</string>
    <string name="cancelar">Cancelar</string>
    <string name="modo_invitado">Modo invitado</string>
    <string name="volver_a_mi_perfil">Volver a Mi Perfil</string>
    <string name="actualizacion_datos">Actualización de datos</string>
    <string name="update_data">Actualizar datos</string>
    <string name="convertirse_voluntario">Convertirse en voluntario</string>
    <string name="become_volunteer_text">Si quieres convertirte en voluntario, tan sólo tienes que indicarnos tu email y nos pondremos en contacto contigo lo más pronto posible.\n\nPuedes ayudarnos a cuidar de los animales, pasearlos, jugar con ellos y organizar diferentes eventos en la protectora, hay todo tipo de tareas que puedes realizar.\n\n¡Te esperamos!</string>
    <string name="enviar_solicitud">Enviar solicitud</string>
    <string name="requisitos_previos">Requisitos previos</string>
</resources>