<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    android:background="@color/fondoGeneral"
    tools:context=".ui.content.DonationsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:textSize="24dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/donationsTitle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:justificationMode="inter_word"
            android:textSize="14dp"
            android:text="@string/donationsText"
            android:layout_marginBottom="30dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/donations_image"
            android:layout_marginBottom="20dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBizum"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:padding="15dp"
            android:backgroundTint="@color/bizum"
            android:text="@string/bizum"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:cornerRadius="24dp"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTransfer"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:padding="15dp"
            android:backgroundTint="@color/lightblue"
            android:text="@string/transfer"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:cornerRadius="24dp"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPayPal"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:padding="15dp"
            android:backgroundTint="@color/paypal"
            android:text="@string/paypal"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:cornerRadius="24dp"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRedsys"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:padding="15dp"
            android:backgroundTint="@color/redsys"
            android:text="@string/redsys"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:cornerRadius="24dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

</ScrollView>