<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:id="@+id/layout"
    android:background="@color/fondoGeneral"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.content.BecomeVolunteerFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/convertirse_voluntario"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/volunteer_image"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:justificationMode="inter_word"
            android:textSize="14dp"
            android:layout_marginBottom="30dp"
            android:text="@string/become_volunteer_text" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_rounded">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/email"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp" />

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSendMail"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/enviar_solicitud"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:cornerRadius="24dp"
            android:layout_marginBottom="30dp"
            />
    </LinearLayout>

</ScrollView>