<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoGeneral"
    tools:context=".ui.content.AboutFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:justificationMode="inter_word"
            android:textSize="14dp"
            android:text="@string/about_text1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginVertical="30dp"
            android:src="@drawable/animal_shelter"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:justificationMode="inter_word"
            android:textSize="14dp"
            android:text="@string/about_text2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnWatchAnimals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="18.7dp"
            android:layout_marginRight="62dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/ver_animales"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:cornerRadius="24dp"
            />
    </LinearLayout>
</ScrollView>