<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.content.ContactFragment"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:id="@+id/layout"
    android:background="@color/fondoGeneral"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textSize="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Formulario de contacto"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border_rounded">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ivEmail"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/email"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border_rounded">

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ivEmail"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/nombre"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_rounded">

        <EditText
            android:id="@+id/etReason"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_regular"
            android:hint="Escriba su mensaje..."
            android:inputType="text"
            android:maxLines="4"
            android:padding="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp" />
    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContact"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/enviar_mensaje"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:cornerRadius="24dp"
        android:layout_marginBottom="30dp"
        />

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        />
</LinearLayout>