<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    android:background="@color/fondoGeneral"
    tools:context=".ui.auth.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:translationZ="1dp"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@drawable/auth_bg">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:src="@drawable/logo" />
        </FrameLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="36dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/border_rounded">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ivEmail"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/email"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp" />

            <ImageView
                android:id="@id/ivEmail"
                android:layout_width="14dp"
                android:layout_height="10dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/email" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/border_rounded">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iconPass"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="Contraseña"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/iconPass"
                android:layout_width="14dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/password" />
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="18.7dp"
            android:layout_marginRight="62dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="24dp"
            />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/registrarse"
            android:textColor="@color/blue"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvRecoverPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Recuperar contraseña"
            android:textColor="@color/lightblue"
            android:textSize="10.5sp" />
    </LinearLayout>

</RelativeLayout>